Update ShardBulkInferenceActionFilterIT to test using bit embeddings